# Genesis

./: .gitattributes  .gitignore  CMakeLists.txt  DOCUMENTATION.md  INSTALLATION.md  README.md  build.sh  scanListen.go
bot/: gpon8080_scanner.c  gpon80_scanner.c  includes.h  killer.c  killer.h  realtek.c
cmake/: genesis-config.cmake.in
cnc/: admin.go  attack.go  database.go  main.go
dlr/: main.c
examples/: README.md  custom_game_loop_object.cpp  custom_physics_object.cpp  the_most_basic_loop.cpp
include/genesis/events/: application_events.hpp
include/genesis/exiting/: exit_event.hpp
loader/src/: main.c
loader/src/headers/: config.h
src/events/: application_events.cpp  input.cpp
src/exiting/: application_exiter.cpp
src/loop/: game_loop.cpp  game_time.cpp
src/math/: vector2.cpp
src/physics/: physics_simulation.cpp
src/rendering/: screen_applier.cpp  screen_cleaner.cpp  window_references.cpp
src/shortcuts/: shortcuts.cpp
